src/test/ui/specialization/specialization-feature-gate-default.stderr
error[E0658]: specialization is unstable
  --> $DIR/specialization-feature-gate-default.rs:10:5
   |
LL |     default fn foo(&self) {}
   |     ^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #31844 <https://github.com/rust-lang/rust/issues/31844> for more information
   = help: add `#![feature(specialization)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
